--- a/public/stylesheets/directions.css
+++ b/public/stylesheets/directions.css
@@ -1,6 +1,6 @@
-#map {
+/*#map {
   height: 50vh;
-}
+}*/
 
 .directions{
   background-color:#fcf8e3;
@@ -8,6 +8,45 @@
 
 .header-text{
   text-align: center;
+  font-family: 'Francois One', sans-serif;
+  font-size: 51px;
+  color: #242430;
+}
+
+#map{
+  /*background: url(/images/piggys.jpg) 50% 0 repeat fixed; max-height: 100vh;*/
+  min-height: 700px;
+  margin: 0 auto;
+  /*width: 100vw;*/
+  max-width: 1920px;
+  position: relative;
+}
+#map article{
+  height: 458px;
+  position: absolute;
+  text-align: center;
+  top: 150px;
+  width: 100%;
+  font-size:50px;
+  color:white;
+}
+
+#about-text{
+  background-image: url(/images/cricut-edge.png);
+  background-repeat:no-repeat;
+  width:100%;
+  margin-top:-65px;
+  /*min-height:100vh;*/
+  opacity:1;
+  position:relative;
+}
+
+#about-text article {
+  /*height: 458px;*/
+  position: absolute;
+  text-align: center;
+  top: 35px;
+  width: 100%;
   font-family: 'Francois One', sans-serif;
   font-size: 51px;
   color: #242430;
