--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -1,19 +1,9 @@
 <link rel="stylesheet" href="/stylesheets/feedback.css">
 
 <div class="container-fluid feedback">
-  <!-- <div class="container reviews">
-    <span class="yelp-review" data-review-id="IMi7SqVU04KkFHEsE9f0aQ" data-hostname="www.yelp.com">Read
-      <a href="https://www.yelp.com/user_details?userid=BbBDod13ftQU75maS_hrgw" rel="nofollow noopener">Liana M.</a>'s
-      <a href="https://www.yelp.com/biz/piggys-restaurant-lake-harmony?hrid=IMi7SqVU04KkFHEsE9f0aQ" rel="nofollow noopener">review</a> of
-      <a href="https://www.yelp.com/biz/zww2tgPKkyOunGQAxAxrCw" rel="nofollow noopener">Piggy's Restaurant</a> on
-      <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a>
-      <script async="async" src="https://www.yelp.com/embed/widgets.js" type="text/javascript"></script>
-    </span>
-  </div> -->
-
-
-
   <script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
   <link href="//assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
-  <ul class="juicer-feed" data-feed-id="piggys-restaurant-lake-harmony">><h1 class="referral"><a href="https://www.juicer.io">Powered by Juicer</a></h1></ul>
+  <ul class="juicer-feed" data-feed-id="piggys-restaurant-lake-harmony">
+    <h1 class="referral"><a href="https://www.juicer.io">Powered by Juicer</a></h1>
+  </ul>
 </div>
