--- a/views/giftshop.ejs
+++ b/views/giftshop.ejs
@@ -1,1 +1,118 @@
-<div>giftshop</div>
+<link rel="stylesheet" href="/stylesheets/giftshop.css">
+
+
+<div class="container-fluid giftshop">
+  <div class="container" id="store">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <span class="title-text">Pig Penn Gift Shop</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 store-item">
+        <div class="store-link">
+            <a href="#larger-view" class="store-hover">
+              <div class="store-hover-content">
+                <i class="fa fa-search-plus fa-3x" data-toggle="modal" data-target="#modalOne"></i>
+              </div>
+            </a>
+              <img src="images/giftshop/classic-tshirt.png" class="img-responsive">
+        </div>
+      </div>
+
+      <div class="col-sm-4 store-item">
+        <div class="store-link">
+            <a href="#larger-view" class="store-hover">
+              <div class="store-hover-content">
+                <i class="fa fa-search-plus fa-3x" data-toggle="modal" data-target="#modalTwo"></i>
+              </div>
+            </a>
+              <img src="images/giftshop/classic-tshirt.png" class="img-responsive">
+        </div>
+      </div>
+
+      <div class="col-sm-4 store-item">
+        <div class="store-link">
+            <a href="#larger-view" class="store-hover">
+              <div class="store-hover-content">
+                <i class="fa fa-search-plus fa-3x" data-toggle="modal" data-target="#modalThree"></i>
+              </div>
+            </a>
+              <img src="images/giftshop/classic-tshirt.png" class="img-responsive">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
+  <div class="store-modal modal fade" id="modalOne" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                  <div class="rl">
+                  </div>
+              </div>
+          </div>
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 col-lg-offset-2">
+                      <div class="modal-body">
+                          <h2>Project Title</h2>
+                          <hr class="star-primary">
+                          <img src="images/giftshop/classic-tshirt.png" class="img-responsive img-centered" alt="">
+                          <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="store-modal modal fade" id="modalTwo" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                  <div class="rl">
+                  </div>
+              </div>
+          </div>
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 col-lg-offset-2">
+                      <div class="modal-body">
+                          <h2>Project Title</h2>
+                          <hr class="star-primary">
+                          <img src="images/giftshop/classic-tshirt.png" class="img-responsive img-centered" alt="">
+                          <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="store-modal modal fade" id="modalT" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                  <div class="rl">
+                  </div>
+              </div>
+          </div>
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 col-lg-offset-2">
+                      <div class="modal-body">
+                          <h2>Project Title</h2>
+                          <hr class="star-primary">
+                          <img src="images/giftshop/classic-tshirt.png" class="img-responsive img-centered" alt="">
+                          <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
