--- a/public/stylesheets/giftshop.css
+++ b/public/stylesheets/giftshop.css
@@ -10,7 +10,9 @@
   font-size: 51px;
   color: #242430;
 }
-
+#store{
+  margin-top:50px;
+}
 #store .store-item {
   margin: 0 0 15px;
   right: 0;
@@ -22,7 +24,7 @@
   margin: 0 auto;
 }
 #store .store-item .store-link .store-hover {
-  background: #ffbaba;
+  background: #c2252a;
   position: absolute;
   width: 100%;
   height: 100%;
