--- a/views/giftshop.ejs
+++ b/views/giftshop.ejs
@@ -3,11 +3,11 @@
 
 <div class="container-fluid giftshop">
   <div class="container" id="store">
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-12 text-center">
         <span class="title-text">Pig Penn Gift Shop</span>
       </div>
-    </div>
+    </div> -->
     <div class="row">
       <div class="col-sm-4 store-item">
         <div class="store-link">
