--- a/views/breakfast.ejs
+++ b/views/breakfast.ejs
@@ -2,10 +2,9 @@
 
 <div class="container-fluid breakfast-background-color">
   <div class="row menu-top">
+      <!-- <img src="images/cricut-edge-red.png"> -->
   </div>
 
-
-<!-- <div class="container"> -->
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
@@ -253,7 +252,4 @@
     </div>
   </div>
 
-<!-- </div> -->
-
-<!-- this is the one to delete below -->
 </div>
