finished ice cream page

--- a/views/ice-cream.ejs
+++ b/views/ice-cream.ejs
@@ -1,1 +1,40 @@
-ice cream
+<link rel="stylesheet" href="/stylesheets/icecream.css">
+
+
+<div class="container-fluid about-bg">
+  <div class="row">
+    <section id="about-pic" data-type="background" data-speed="10" class="pages">
+        <article></a>
+    </section>
+  </div>
+
+  <div class="row">
+    <section id="about-text" data-type="background" data-speed="10" class="pages">
+        <article>HOG HEAVEN ICE CREAM</article>
+        <div class="piggys-tale">
+          <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
+            <div class="row about-paragraphs">
+              Open from Memorial Day to Labor Day every summer!
+            </div>
+
+            <div class="row about-paragraphs">
+              Hours:
+            </div>
+
+            <div class="row about-paragraphs">
+              3pm to 10pm Monday - Friday
+            </div>
+
+            <div class="row about-paragraphs">
+              12pm to 10pm Saturday &amp; Sunday
+            </div>
+
+            <div class="row about-paragraphs">
+              22 flavors, 6 different types of cones and 16 toppings to choose from
+            </div>
+
+          </div>
+        </div>
+    </section>
+  </div>
+</div>
