--- a/views/directions.ejs
+++ b/views/directions.ejs
@@ -1,77 +1,12 @@
 <link rel="stylesheet" href="/stylesheets/directions.css">
 
-<!-- <div class="container-fluid">
-
-
-    <div class="row" id="map"></div>
-        <script>
-          function initMap() {
-            var restaurant = {lat: 41.060623, lng: -75.591204};
-            var map = new google.maps.Map(document.getElementById('map'), {
-              zoom: 16,
-              scrollwheel: false,
-              center: restaurant
-            });
-
-            var contentString = '<div id="content">'+
-              '</div>'+
-              '<h1>Piggys Restaurant</h1>'+
-              '<div id="bodyContent">'+
-              '<a href="https://www.google.com/maps/place/Piggys/@41.0606239,-75.5912084,15z/data=!4m5!3m4!1s0x0:0x79cae1ba6ee94246!8m2!3d41.0606239!4d-75.5912084"><p>Directions to: 16 N Lakeshore Dr, Lake Harmony, PA 18624</p></a>'+
-              '</div>'+
-              '</div>';
-
-            var infowindow = new google.maps.InfoWindow({
-              content: contentString
-            });
-
-            var marker = new google.maps.Marker({
-              position: restaurant,
-              map: map,
-              title: 'Uluru (Ayers Rock)'
-            });
-            marker.addListener('click', function() {
-              infowindow.open(map, marker);
-            });
-          }
-        </script>
-
-
-        <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDbonUFD0KILkQUvaHKwGtf-JqHV9XBVU&callback=initMap">
-        </script>
-
-
-
-        <div class="row directions">
-
-          <span class="header-text">Contact us at:</span>
-          <p>Paul and Bette Davidson</p>
-          <p>PO Box 565</p>
-          <p>N Lake Dr and S. Lake Dr</p>
-          <p>Lake Harmony PA 18624</p>
-          <p>(570) 722-8493</p>
-
-          <p>GPS settings: 91 N. Lake Drive, Lake Harmony, PA</p>
-
-          <span class="header-text">Directions:</span>
-
-          <p>From I-476 North or South (PA Turnpike Northeast Extension): Take exit 95, Pocono, and turn left onto Rt. 940 East. *At the first light (approx. 3 miles) take a right onto Moseywood Road at Split Rock Resort. You will have to pay a one dollar ($1.00) toll to drive through Split Rock. After you pass the Galleria (a hotel) make the next right onto Birchwood Rd. As you pass the miniature golf course and park, follow the road to the right. Once you drive through the second tollgate (no toll on this end) we're another mile ahead on Lake Drive, past Nick's Lake House.</p>
-
-          <p>From I-80 East: Take exit 277, Lake Harmony, to the light at Rt. 940. Take a Right onto Rt. 940 East. Then follow directions for Turnpike from asterisk(*).</p>
-
-          <p>From I-80 West: Take exit 284, Blakeslee, and turn left onto Rt. 115. After 3 miles, take a Right onto Rt. 903. Another 3 miles will bring you to Big Boulder Mountain Road (which is known as Lake Drive at the other end). Follow Lake Drive to the stop sign at Piggy's in Lake Harmony!</p>
-        </div>
-
-</div> -->
-
 
 
 <div class="container-fluid about-bg">
-  <!-- <div class="row"> -->
-  <div class="row">
 
-    <section id="map" data-type="background" data-speed="10" class="pages">
+
+
+  <div class="row" id="map">
           <script>
             function initMap() {
               var restaurant = {lat: 41.060623, lng: -75.591204};
@@ -109,7 +44,6 @@
           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDbonUFD0KILkQUvaHKwGtf-JqHV9XBVU&callback=initMap">
           </script>
           <article></article>
-    </section>
   </div>
 
 
@@ -118,40 +52,36 @@
 
 
 
-  <div class="row">
-    <section id="about-text" data-type="background" data-speed="10" class="pages">
-        <article>PIGGY'S TALE</article>
-        <div class="piggys-tale">
+  <div class="row" id="about-text">
+        <article>DIRECTIONS TO PIGGY'S</article>
+        <div class="piggys-directions">
           <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
             <div class="row about-paragraphs">
-              Piggy's Restaurant was founded in 1985 with the goal of serving only the highest quality food, prepared with care, and served by a courteous and friendly wait-staff. We find our foods and ingredients by regularly attending food shows in search of the best possible products.
+              Paul &amp; Bette Davidson<br>
+              PO Box 565<br>
+              N Lake Dr &amp; S. Lake Dr<br>
+              Lake Harmony PA 18624<br>
+              (570) 722-8493<br><br>
+
+              GPS settings: 91 N. Lake Drive, Lake Harmony, PA
             </div>
 
-            <div class="row about-paragraphs">
-              A few of the quality foods we serve at this time are Hatfield Meats, Thomas English Muffins, Arnolds Brick Oven Breads, Smuckers Jellies, Lipton Teas, and Maxwell House Coffee.
+            <div class="row direction-from">
+              From I-476 North or South (PA Turnpike Northeast Extension): Take exit 95, Pocono, and turn left onto Rt. 940 East. *At the first light (approx. 3 miles) take a right onto Moseywood Road at Split Rock Resort. You will have to pay a one dollar ($1.00) toll to drive through Split Rock. After you pass the Galleria (a hotel) make the next right onto Birchwood Rd. As you pass the miniature golf course and park, follow the road to the right. Once you drive through the second tollgate (no toll on this end) we're another mile ahead on Lake Drive, past Nick's Lake House.
             </div>
 
-            <div class="row about-paragraphs">
-              The coffee, juices, Coca-Cola sodas, hot chocolate, and water all taste good thanks to an on-site water treatment system that softens, triple-filters, UV purifies and PH balances the water.
+            <div class="row direction-from">
+              From I-80 East: Take exit 277, Lake Harmony, to the light at Rt. 940. Take a Right onto Rt. 940 East. Then follow directions for Turnpike from asterisk(*).
             </div>
 
-            <div class="row about-paragraphs">
-              The fresh dairy products come from a local farmers' co-op with members who do not use bovine hormones on their herds.
+            <div class="row direction-from">
+              From I-80 West: Take exit 284, Blakeslee, and turn left onto Rt. 115. After 3 miles, take a Right onto Rt. 903. Another 3 miles will bring you to Big Boulder Mountain Road (which is known as Lake Drive at the other end). Follow Lake Drive to the stop sign at Piggy's in Lake Harmony!
             </div>
 
-            <div class="row about-paragraphs">
-              Some items are made using our own original recipes. Our pancakes are blended from fresh ingredients in small batches to ensure each pancake is like homemade. Our French and Batter toasts have pure vanilla extracts that give them unique flavor. We bake our complimentary blueberry muffins everyday with wild Canadian blueberries that are small and sweet. Some days we bake over a thousand muffins.
-            </div>
 
-            <div class="row about-paragraphs">
-              The best part of Piggy's Restaurant is our staff. They are here to make your visit to our restaurant a pleasant experience, which we hope you will want to repeat. You, the customer, are the reason we work hard to present you with the best, and our staff will try to accommodate you whenever possible.
-            </div>
-
-            <div class="row about-paragraphs">
-              THE OWNER AND STAFF THANK YOU FOR CHOOSING PIGGY'S RESTAURANT
-            </div>
           </div>
         </div>
-    </section>
   </div>
+
+
 </div>
