--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -95,7 +95,11 @@
 
       <span class="footer-text">HIGH QUALITY FOOD, CRAFTED WITH <i class="fa fa-heart" aria-hidden="true"></i> IN THE POCONOS</span>
     </footer>
-    <div class="second-footer">&copy; Piggy's Restaurant. All Rights Reserved.</div>
+    <div class="second-footer">
+      &copy; Piggy's Restaurant. All Rights Reserved.
+    </div>
+
+
     <script
     src="//code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
